docs/errors/examples/file-not-found-via-stdlib/file-not-found-via-stdlib.expected.txt
error[E5301]: file not found
  --> file-not-found-via-stdlib.grob:3:9
   |
 3 | lines := fs.readLines(`C:\reports\summary.txt`)
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: path: C:\reports\summary.txt
   = help: guard with `fs.exists(path)` before reading
   |
   from fs.readLines (file-not-found-via-stdlib.grob:3:9)
   at <top-level> (file-not-found-via-stdlib.grob:3:9)
